* Fix IE error when passing a malformed string to document.getElementById()/document.getElementByTagName(). Closes #11568. [gryn, jddalton, kangax]

* Add Feature test FUNCTION_TO_STRING_RETURNS_SOURCE in preparation for Class rewrite. [jddalton]

* Add Element#isFragment to detect if an element is an unattached fragment or a child of one. [jddalton]

* Fix issue, in quirks mode, where versions of Safari, before 3.1.2, treat class names case-insensitively in Selector/$$ queries. [#390 state:resolved] [Andrew Dupont, Brice, kangax]

* Make String#strip use custom whitespace character class for browsers missing full support. [dimik, doug, jddalton, kangax]
  Originally reported on http://dev.jquery.com/ticket/2690.

* Enhance Selector#match to support a "group" (comma-separated) selector. [#318 state:resolved] [Andrew Dupont, jddalton, wiktor]

* Make String#stripTags work properly with tags that contain closing brackets in their attributes. [jddalton, kangax]

* Stop Enumerable#grep, Array#grep, and String#gsub from freezing when passed an empty string as a pattern. [jddalton, kangax]

*FuseJS Alpha* (December 6, 2008)

* Add private helper method isHostObject() to correctly detect host methods and properties. [David Mark, jddalton]

* Massive code rewrite and restructuring [bkerley, jddalton, Joe Gornick, T.J. Crowder]
  - Adopt new coding pattern
  - Restructure file system to accommodate custom builds
  - Backwards compatibility change for Ajax.Responders.responders property
  - Update .gitignore files to ingore raked and temporary files
  - Adjust edge case unit tests

* unit test: Make Ajax unit tests work in Safari 2, stop Dom unit tests from crashing Opera 9.2x on OS X, and perform minor cleanup on Form and Dom unit tests. [jddalton]

* Fix Element#insert on colgroup and optgroup elements by adding entries to Element._insertionTranslations.tags. [jddalton]

* Rewrite the Element._attributeTranslations object to reduce its code size. [jddalton]
