@@ -1,3 +1,5 @@
+* Optimize Element.extend() further by replacing for-in loops with reverse while-loops. [jddalton]
+
 * Fix IE error when passing a malformed string to document.getElementById()/document.getElementByTagName(). Closes #11568. [gryn, jddalton, kangax]
 
 * Add Feature test FUNCTION_TO_STRING_RETURNS_SOURCE in preparation for Class rewrite. [jddalton]
